@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.query;
 
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -157,7 +156,7 @@ public class QueryCompilationTest extends QueryEnvironmentTestBase {
   public void testJoinPushTransitivePredicate() {
     // queries involving extra predicate on join keys
     // should be optimized to push the predicate to both sides of the join if applicable
-    String query = "EXPLAIN PLAN FOR\n"
+    String query = "SET usePlannerRules='JoinPushTransitivePredicates'; EXPLAIN PLAN FOR\n"
         + "SELECT * FROM a\n"
         + "JOIN b\n"
         + "ON a.col1 = b.col1\n"
@@ -305,7 +304,7 @@ public class QueryCompilationTest extends QueryEnvironmentTestBase {
     // Assert that no project of filter node for any intermediate stage because all should've been pushed down.
     for (DispatchablePlanFragment dispatchablePlanFragment : intermediateStages) {
       PlanNode roots = dispatchablePlanFragment.getPlanFragment().getFragmentRoot();
-      assertNodeTypeNotIn(roots, ImmutableList.of(ProjectNode.class, FilterNode.class));
+      assertNodeTypeNotIn(roots, List.of(ProjectNode.class, FilterNode.class));
     }
   }
 
@@ -526,6 +525,7 @@ public class QueryCompilationTest extends QueryEnvironmentTestBase {
     RuntimeException e = expectThrows(RuntimeException.class, () -> _queryEnvironment.getTableNamesForQuery(query));
     assertTrue(e.getCause().getMessage().contains("Duplicate alias in WITH: 'tmp'"));
   }
+
 
   @Test
   public void testWindowFunctions() {
